--- a/style.css
+++ b/style.css
@@ -20,23 +20,41 @@ body{
     display: flex;
     align-items: center;
     justify-content: center;
+    flex-direction: column;
+}
+
+.monitor{
+    width: 80%;
+    height: 200px;
+    border: 4px solid cadetblue;
+    border-radius: 20px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.monitor p{
+    color: #fff;
+    font-weight: 900;
+    font-size: 7rem;
 }
 
 .klaviatura{
+    margin-top: 30px;
     padding: 10px 10px;
     width: 80%;
     height: 500px;
-    border: 4px solid white;
+    border: 4px solid cadetblue;
     display: flex;
     align-items: flex-start;
     justify-content: space-between;
     flex-direction: column;
+    border-radius: 12px;
 }
 
 .box_1{
     width: 100%;
     height: auto;
-    /* border: 4px solid white; */
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -48,4 +66,6 @@ body{
     box-shadow: 2px 2px 4px gray;  
     font-weight: 600;
     border: 0;
+    color: #fff;
+    background: #000;
 }
