--- a/style.css
+++ b/style.css
@@ -69,3 +69,57 @@ body{
     color: #fff;
     background: #000;
 }
+
+@media (max-width: 400px) {
+    .klaviatura {
+        margin-top: 30px;
+        padding: 10px 10px;
+        width: 80%;
+        height: 500px;
+        border: 4px solid cadetblue;
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        border-radius: 12px;
+    }
+
+    .box_1 {
+        width: 100%;
+        height: auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 10px 0px;
+        overflow-x: auto;
+    }
+
+    .box_1 button {
+        margin-right: 5px;
+        padding: 15px;
+        box-shadow: 2px 2px 4px gray;
+        font-weight: 600;
+        border: 0;
+        color: #fff;
+        background: #000;
+    }
+
+    .monitor p{
+        font-size: 3rem;
+    }
+
+    .box_1 #c_l{
+        height: 46px;
+        line-height: 0.899;
+    }
+
+    .box_1 #bac{
+        height: 46px;
+        line-height: 9px;
+    }
+
+    .box_1 #prt{
+        height: 46px;
+        line-height: 0.89;
+    }
+}
