--- a/style.css
+++ b/style.css
@@ -70,6 +70,43 @@ body{
     background: #000;
 }
 
+@media (max-width: 1060px) {
+    .monitor p{
+        font-size: 6.2rem;
+    }
+
+    .box_1{
+        overflow-x: auto;
+    }
+}
+
+@media (max-width: 780px) {
+    .monitor p {
+        color: #fff;
+        font-weight: 900;
+        font-size: 5rem;
+    }
+
+    .box_1{
+        overflow-x: auto;
+    }
+
+    .box_1 #c_l{
+        height: 46px;
+        line-height: 0.899;
+    }
+
+    .box_1 #bac{
+        height: 46px;
+        line-height: 9px;
+    }
+
+    .box_1 #prt{
+        height: 46px;
+        line-height: 0.89;
+    }
+}
+
 @media (max-width: 400px) {
     .klaviatura {
         margin-top: 30px;
