--- a/style.css
+++ b/style.css
@@ -70,6 +70,11 @@ body{
     background: #000;
 }
 
+.box_1 button:hover{
+    background-color: #fff;
+    color: #000;
+}
+
 @media (max-width: 1060px) {
     .monitor p{
         font-size: 6.2rem;
